// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Next - Explicit resource management > Using declarations (fail) > { await using x = y; } 1`] = `
"SyntaxError [1:2-1:7]: 'await using' declarations are only allowed inside async functions and at the top level of modules
> 1 | { await using x = y; }
    |   ^^^^^ 'await using' declarations are only allowed inside async functions and at the top level of modules"
`;

exports[`Next - Explicit resource management > Using declarations (fail) > { us\\u0069ng x = y; } 1`] = `
"SyntaxError [1:13-1:14]: Unexpected token: 'identifier'
> 1 | { us\\u0069ng x = y; }
    |              ^ Unexpected token: 'identifier'"
`;

exports[`Next - Explicit resource management > Using declarations (fail) > { using {x} = y; } 1`] = `
"SyntaxError [1:8-1:9]: 'using' declarations cannot have destructuring patterns
> 1 | { using {x} = y; }
    |         ^ 'using' declarations cannot have destructuring patterns"
`;

exports[`Next - Explicit resource management > Using declarations (fail) > { using let = x; } 1`] = `
"SyntaxError [1:8-1:11]: 'A lexical declaration can't define a 'let' binding
> 1 | { using let = x; }
    |         ^^^ 'A lexical declaration can't define a 'let' binding"
`;

exports[`Next - Explicit resource management > Using declarations (fail) > { using x = y, [z] = w; } 1`] = `
"SyntaxError [1:15-1:16]: 'using' declarations cannot have destructuring patterns
> 1 | { using x = y, [z] = w; }
    |                ^ 'using' declarations cannot have destructuring patterns"
`;

exports[`Next - Explicit resource management > Using declarations (fail) > { using x = y, z; } 1`] = `
"SyntaxError [1:16-1:17]: 'using' declarations must have an initializer
> 1 | { using x = y, z; }
    |                 ^ 'using' declarations must have an initializer"
`;

exports[`Next - Explicit resource management > Using declarations (fail) > { using x = y; } 1`] = `
"SyntaxError [1:8-1:9]: Unexpected token: 'identifier'
> 1 | { using x = y; }
    |         ^ Unexpected token: 'identifier'"
`;

exports[`Next - Explicit resource management > Using declarations (fail) > { using x = y; using x = z; } 1`] = `
"SyntaxError [1:23-1:24]: Duplicate binding 'x'
> 1 | { using x = y; using x = z; }
    |                        ^ Duplicate binding 'x'"
`;

exports[`Next - Explicit resource management > Using declarations (fail) > { using x; } 1`] = `
"SyntaxError [1:9-1:10]: 'using' declarations must have an initializer
> 1 | { using x; }
    |          ^ 'using' declarations must have an initializer"
`;

exports[`Next - Explicit resource management > Using declarations (fail) > async function f() { await
using x = y; } 1`] = `
"SyntaxError [2:6-2:7]: Unexpected token: 'identifier'
  1 | async function f() { await
> 2 | using x = y; }
    |       ^ Unexpected token: 'identifier'"
`;

exports[`Next - Explicit resource management > Using declarations (fail) > async function f() { await using {x} = y; } 1`] = `
"SyntaxError [1:33-1:34]: 'await using' declarations cannot have destructuring patterns
> 1 | async function f() { await using {x} = y; }
    |                                  ^ 'await using' declarations cannot have destructuring patterns"
`;

exports[`Next - Explicit resource management > Using declarations (fail) > async function f() { await using x; } 1`] = `
"SyntaxError [1:34-1:35]: 'await using' declarations must have an initializer
> 1 | async function f() { await using x; }
    |                                   ^ 'await using' declarations must have an initializer"
`;

exports[`Next - Explicit resource management > Using declarations (fail) > async function f() { for (await using x in y); } 1`] = `
"SyntaxError [1:40-1:42]: 'await using' declarations are not allowed in for-in loops
> 1 | async function f() { for (await using x in y); }
    |                                         ^^ 'await using' declarations are not allowed in for-in loops"
`;

exports[`Next - Explicit resource management > Using declarations (fail) > await using x = y; 1`] = `
"SyntaxError [1:0-1:5]: 'await using' declarations are only allowed inside async functions and at the top level of modules
> 1 | await using x = y;
    | ^^^^^ 'await using' declarations are only allowed inside async functions and at the top level of modules"
`;

exports[`Next - Explicit resource management > Using declarations (fail) > class C { static { await using x = y; } } 1`] = `
"SyntaxError [1:19-1:24]: cannot use "await" in static blocks
> 1 | class C { static { await using x = y; } }
    |                    ^^^^^ cannot use "await" in static blocks"
`;

exports[`Next - Explicit resource management > Using declarations (fail) > for (await using x of y); 1`] = `
"SyntaxError [1:5-1:10]: 'await using' declarations are only allowed inside async functions and at the top level of modules
> 1 | for (await using x of y);
    |      ^^^^^ 'await using' declarations are only allowed inside async functions and at the top level of modules"
`;

exports[`Next - Explicit resource management > Using declarations (fail) > for (using {x} of y); 1`] = `
"SyntaxError [1:11-1:12]: 'using' declarations cannot have destructuring patterns
> 1 | for (using {x} of y);
    |            ^ 'using' declarations cannot have destructuring patterns"
`;

exports[`Next - Explicit resource management > Using declarations (fail) > for (using of of y); 1`] = `
"SyntaxError [1:17-1:18]: Expected ')'
> 1 | for (using of of y);
    |                  ^ Expected ')'"
`;

exports[`Next - Explicit resource management > Using declarations (fail) > for (using x = y of z); 1`] = `
"SyntaxError [1:11-1:19]: 'for-of' loop head declarations can not have an initializer
> 1 | for (using x = y of z);
    |            ^^^^^^^^ 'for-of' loop head declarations can not have an initializer"
`;

exports[`Next - Explicit resource management > Using declarations (fail) > for (using x in y); 1`] = `
"SyntaxError [1:13-1:15]: 'using' declarations are not allowed in for-in loops
> 1 | for (using x in y);
    |              ^^ 'using' declarations are not allowed in for-in loops"
`;

exports[`Next - Explicit resource management > Using declarations (fail) > for (using x; ;); 1`] = `
"SyntaxError [1:12-1:13]: 'using' declarations must have an initializer
> 1 | for (using x; ;);
    |             ^ 'using' declarations must have an initializer"
`;

exports[`Next - Explicit resource management > Using declarations (fail) > function f() { await using x = y; } 1`] = `
"SyntaxError [1:15-1:20]: 'await using' declarations are only allowed inside async functions and at the top level of modules
> 1 | function f() { await using x = y; }
    |                ^^^^^ 'await using' declarations are only allowed inside async functions and at the top level of modules"
`;

exports[`Next - Explicit resource management > Using declarations (fail) > function f() { await using x = y; } 2`] = `
"SyntaxError [1:15-1:20]: 'await using' declarations are only allowed inside async functions and at the top level of modules
> 1 | function f() { await using x = y; }
    |                ^^^^^ 'await using' declarations are only allowed inside async functions and at the top level of modules"
`;

exports[`Next - Explicit resource management > Using declarations (fail) > function f() { for (await using x of y); } 1`] = `
"SyntaxError [1:20-1:25]: 'await using' declarations are only allowed inside async functions and at the top level of modules
> 1 | function f() { for (await using x of y); }
    |                     ^^^^^ 'await using' declarations are only allowed inside async functions and at the top level of modules"
`;

exports[`Next - Explicit resource management > Using declarations (fail) > if (a) using x = y; 1`] = `
"SyntaxError [1:13-1:14]: Unexpected token: 'identifier'
> 1 | if (a) using x = y;
    |              ^ Unexpected token: 'identifier'"
`;

exports[`Next - Explicit resource management > Using declarations (fail) > label: using x = y; 1`] = `
"SyntaxError [1:13-1:14]: Unexpected token: 'identifier'
> 1 | label: using x = y;
    |              ^ Unexpected token: 'identifier'"
`;

exports[`Next - Explicit resource management > Using declarations (fail) > using x = y; 1`] = `
"SyntaxError [1:0-1:5]: 'using' declarations are not allowed in the global scope of a script
> 1 | using x = y;
    | ^^^^^ 'using' declarations are not allowed in the global scope of a script"
`;

exports[`Next - Explicit resource management > Using declarations (fail) > using x = y; 2`] = `
"SyntaxError [1:0-1:5]: 'using' declarations are not allowed in the global scope of a script
> 1 | using x = y;
    | ^^^^^ 'using' declarations are not allowed in the global scope of a script"
`;

exports[`Next - Explicit resource management > Using declarations (pass) > { await using x = y; } 1`] = `
{
  "body": [
    {
      "body": [
        {
          "declarations": [
            {
              "id": {
                "name": "x",
                "type": "Identifier",
              },
              "init": {
                "name": "y",
                "type": "Identifier",
              },
              "type": "VariableDeclarator",
            },
          ],
          "kind": "await using",
          "type": "VariableDeclaration",
        },
      ],
      "type": "BlockStatement",
    },
  ],
  "sourceType": "module",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Using declarations (pass) > { using
x = y; } 1`] = `
{
  "body": [
    {
      "body": [
        {
          "expression": {
            "name": "using",
            "type": "Identifier",
          },
          "type": "ExpressionStatement",
        },
        {
          "expression": {
            "left": {
              "name": "x",
              "type": "Identifier",
            },
            "operator": "=",
            "right": {
              "name": "y",
              "type": "Identifier",
            },
            "type": "AssignmentExpression",
          },
          "type": "ExpressionStatement",
        },
      ],
      "type": "BlockStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Using declarations (pass) > { using in x; } 1`] = `
{
  "body": [
    {
      "body": [
        {
          "expression": {
            "left": {
              "name": "using",
              "type": "Identifier",
            },
            "operator": "in",
            "right": {
              "name": "x",
              "type": "Identifier",
            },
            "type": "BinaryExpression",
          },
          "type": "ExpressionStatement",
        },
      ],
      "type": "BlockStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Using declarations (pass) > { using x = y, z = w; } 1`] = `
{
  "body": [
    {
      "body": [
        {
          "declarations": [
            {
              "id": {
                "name": "x",
                "type": "Identifier",
              },
              "init": {
                "name": "y",
                "type": "Identifier",
              },
              "type": "VariableDeclarator",
            },
            {
              "id": {
                "name": "z",
                "type": "Identifier",
              },
              "init": {
                "name": "w",
                "type": "Identifier",
              },
              "type": "VariableDeclarator",
            },
          ],
          "kind": "using",
          "type": "VariableDeclaration",
        },
      ],
      "type": "BlockStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Using declarations (pass) > { using x = y; } 1`] = `
{
  "body": [
    {
      "body": [
        {
          "declarations": [
            {
              "id": {
                "name": "x",
                "type": "Identifier",
              },
              "init": {
                "name": "y",
                "type": "Identifier",
              },
              "type": "VariableDeclarator",
            },
          ],
          "kind": "using",
          "type": "VariableDeclaration",
        },
      ],
      "type": "BlockStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Using declarations (pass) > { using x = y; using z = x; } 1`] = `
{
  "body": [
    {
      "body": [
        {
          "declarations": [
            {
              "id": {
                "name": "x",
                "type": "Identifier",
              },
              "init": {
                "name": "y",
                "type": "Identifier",
              },
              "type": "VariableDeclarator",
            },
          ],
          "kind": "using",
          "type": "VariableDeclaration",
        },
        {
          "declarations": [
            {
              "id": {
                "name": "z",
                "type": "Identifier",
              },
              "init": {
                "name": "x",
                "type": "Identifier",
              },
              "type": "VariableDeclarator",
            },
          ],
          "kind": "using",
          "type": "VariableDeclaration",
        },
      ],
      "type": "BlockStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Using declarations (pass) > async () => { await using x = y; } 1`] = `
{
  "body": [
    {
      "expression": {
        "async": true,
        "body": {
          "body": [
            {
              "declarations": [
                {
                  "id": {
                    "name": "x",
                    "type": "Identifier",
                  },
                  "init": {
                    "name": "y",
                    "type": "Identifier",
                  },
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "await using",
              "type": "VariableDeclaration",
            },
          ],
          "type": "BlockStatement",
        },
        "expression": false,
        "generator": false,
        "params": [],
        "type": "ArrowFunctionExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Using declarations (pass) > async function f() { await using
x; } 1`] = `
{
  "body": [
    {
      "async": true,
      "body": {
        "body": [
          {
            "expression": {
              "argument": {
                "name": "using",
                "type": "Identifier",
              },
              "type": "AwaitExpression",
            },
            "type": "ExpressionStatement",
          },
          {
            "expression": {
              "name": "x",
              "type": "Identifier",
            },
            "type": "ExpressionStatement",
          },
        ],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "f",
        "type": "Identifier",
      },
      "params": [],
      "type": "FunctionDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Using declarations (pass) > async function f() { await using x = y, z = w; } 1`] = `
{
  "body": [
    {
      "async": true,
      "body": {
        "body": [
          {
            "declarations": [
              {
                "id": {
                  "name": "x",
                  "type": "Identifier",
                },
                "init": {
                  "name": "y",
                  "type": "Identifier",
                },
                "type": "VariableDeclarator",
              },
              {
                "id": {
                  "name": "z",
                  "type": "Identifier",
                },
                "init": {
                  "name": "w",
                  "type": "Identifier",
                },
                "type": "VariableDeclarator",
              },
            ],
            "kind": "await using",
            "type": "VariableDeclaration",
          },
        ],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "f",
        "type": "Identifier",
      },
      "params": [],
      "type": "FunctionDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Using declarations (pass) > async function f() { await using x = y; } 1`] = `
{
  "body": [
    {
      "async": true,
      "body": {
        "body": [
          {
            "declarations": [
              {
                "id": {
                  "name": "x",
                  "type": "Identifier",
                },
                "init": {
                  "name": "y",
                  "type": "Identifier",
                },
                "type": "VariableDeclarator",
              },
            ],
            "kind": "await using",
            "type": "VariableDeclaration",
          },
        ],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "f",
        "type": "Identifier",
      },
      "params": [],
      "type": "FunctionDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Using declarations (pass) > async function f() { await using; } 1`] = `
{
  "body": [
    {
      "async": true,
      "body": {
        "body": [
          {
            "expression": {
              "argument": {
                "name": "using",
                "type": "Identifier",
              },
              "type": "AwaitExpression",
            },
            "type": "ExpressionStatement",
          },
        ],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "f",
        "type": "Identifier",
      },
      "params": [],
      "type": "FunctionDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Using declarations (pass) > async function f() { await using[x]; } 1`] = `
{
  "body": [
    {
      "async": true,
      "body": {
        "body": [
          {
            "expression": {
              "argument": {
                "computed": true,
                "object": {
                  "name": "using",
                  "type": "Identifier",
                },
                "optional": false,
                "property": {
                  "name": "x",
                  "type": "Identifier",
                },
                "type": "MemberExpression",
              },
              "type": "AwaitExpression",
            },
            "type": "ExpressionStatement",
          },
        ],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "f",
        "type": "Identifier",
      },
      "params": [],
      "type": "FunctionDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Using declarations (pass) > async function f() { for (await using of of y); } 1`] = `
{
  "body": [
    {
      "async": true,
      "body": {
        "body": [
          {
            "await": false,
            "body": {
              "type": "EmptyStatement",
            },
            "left": {
              "declarations": [
                {
                  "id": {
                    "name": "of",
                    "type": "Identifier",
                  },
                  "init": null,
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "await using",
              "type": "VariableDeclaration",
            },
            "right": {
              "name": "y",
              "type": "Identifier",
            },
            "type": "ForOfStatement",
          },
        ],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "f",
        "type": "Identifier",
      },
      "params": [],
      "type": "FunctionDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Using declarations (pass) > async function f() { for (await using x of y); } 1`] = `
{
  "body": [
    {
      "async": true,
      "body": {
        "body": [
          {
            "await": false,
            "body": {
              "type": "EmptyStatement",
            },
            "left": {
              "declarations": [
                {
                  "id": {
                    "name": "x",
                    "type": "Identifier",
                  },
                  "init": null,
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "await using",
              "type": "VariableDeclaration",
            },
            "right": {
              "name": "y",
              "type": "Identifier",
            },
            "type": "ForOfStatement",
          },
        ],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "f",
        "type": "Identifier",
      },
      "params": [],
      "type": "FunctionDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Using declarations (pass) > async function f() { for await (await using x of y); } 1`] = `
{
  "body": [
    {
      "async": true,
      "body": {
        "body": [
          {
            "await": true,
            "body": {
              "type": "EmptyStatement",
            },
            "left": {
              "declarations": [
                {
                  "id": {
                    "name": "x",
                    "type": "Identifier",
                  },
                  "init": null,
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "await using",
              "type": "VariableDeclaration",
            },
            "right": {
              "name": "y",
              "type": "Identifier",
            },
            "type": "ForOfStatement",
          },
        ],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "f",
        "type": "Identifier",
      },
      "params": [],
      "type": "FunctionDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Using declarations (pass) > async function f() { for await (using x of y); } 1`] = `
{
  "body": [
    {
      "async": true,
      "body": {
        "body": [
          {
            "await": true,
            "body": {
              "type": "EmptyStatement",
            },
            "left": {
              "declarations": [
                {
                  "id": {
                    "name": "x",
                    "type": "Identifier",
                  },
                  "init": null,
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "using",
              "type": "VariableDeclaration",
            },
            "right": {
              "name": "y",
              "type": "Identifier",
            },
            "type": "ForOfStatement",
          },
        ],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "f",
        "type": "Identifier",
      },
      "params": [],
      "type": "FunctionDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Using declarations (pass) > await
using
x 1`] = `
{
  "body": [
    {
      "expression": {
        "name": "await",
        "type": "Identifier",
      },
      "type": "ExpressionStatement",
    },
    {
      "expression": {
        "name": "using",
        "type": "Identifier",
      },
      "type": "ExpressionStatement",
    },
    {
      "expression": {
        "name": "x",
        "type": "Identifier",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Using declarations (pass) > await using x = y; 1`] = `
{
  "body": [
    {
      "declarations": [
        {
          "id": {
            "name": "x",
            "type": "Identifier",
          },
          "init": {
            "name": "y",
            "type": "Identifier",
          },
          "type": "VariableDeclarator",
        },
      ],
      "kind": "await using",
      "type": "VariableDeclaration",
    },
  ],
  "sourceType": "module",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Using declarations (pass) > class C { static { using x = y; } } 1`] = `
{
  "body": [
    {
      "body": {
        "body": [
          {
            "body": [
              {
                "declarations": [
                  {
                    "id": {
                      "name": "x",
                      "type": "Identifier",
                    },
                    "init": {
                      "name": "y",
                      "type": "Identifier",
                    },
                    "type": "VariableDeclarator",
                  },
                ],
                "kind": "using",
                "type": "VariableDeclaration",
              },
            ],
            "type": "StaticBlock",
          },
        ],
        "type": "ClassBody",
      },
      "decorators": [],
      "id": {
        "name": "C",
        "type": "Identifier",
      },
      "superClass": null,
      "type": "ClassDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Using declarations (pass) > for (await using x of y); 1`] = `
{
  "body": [
    {
      "await": false,
      "body": {
        "type": "EmptyStatement",
      },
      "left": {
        "declarations": [
          {
            "id": {
              "name": "x",
              "type": "Identifier",
            },
            "init": null,
            "type": "VariableDeclarator",
          },
        ],
        "kind": "await using",
        "type": "VariableDeclaration",
      },
      "right": {
        "name": "y",
        "type": "Identifier",
      },
      "type": "ForOfStatement",
    },
  ],
  "sourceType": "module",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Using declarations (pass) > for (using in x); 1`] = `
{
  "body": [
    {
      "body": {
        "type": "EmptyStatement",
      },
      "left": {
        "name": "using",
        "type": "Identifier",
      },
      "right": {
        "name": "x",
        "type": "Identifier",
      },
      "type": "ForInStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Using declarations (pass) > for (using of x); 1`] = `
{
  "body": [
    {
      "await": false,
      "body": {
        "type": "EmptyStatement",
      },
      "left": {
        "name": "using",
        "type": "Identifier",
      },
      "right": {
        "name": "x",
        "type": "Identifier",
      },
      "type": "ForOfStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Using declarations (pass) > for (using x = y; ;); 1`] = `
{
  "body": [
    {
      "body": {
        "type": "EmptyStatement",
      },
      "init": {
        "declarations": [
          {
            "id": {
              "name": "x",
              "type": "Identifier",
            },
            "init": {
              "name": "y",
              "type": "Identifier",
            },
            "type": "VariableDeclarator",
          },
        ],
        "kind": "using",
        "type": "VariableDeclaration",
      },
      "test": null,
      "type": "ForStatement",
      "update": null,
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Using declarations (pass) > for (using x of y); 1`] = `
{
  "body": [
    {
      "await": false,
      "body": {
        "type": "EmptyStatement",
      },
      "left": {
        "declarations": [
          {
            "id": {
              "name": "x",
              "type": "Identifier",
            },
            "init": null,
            "type": "VariableDeclarator",
          },
        ],
        "kind": "using",
        "type": "VariableDeclaration",
      },
      "right": {
        "name": "y",
        "type": "Identifier",
      },
      "type": "ForOfStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Using declarations (pass) > for (using; ;); 1`] = `
{
  "body": [
    {
      "body": {
        "type": "EmptyStatement",
      },
      "init": {
        "name": "using",
        "type": "Identifier",
      },
      "test": null,
      "type": "ForStatement",
      "update": null,
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Using declarations (pass) > for (using[x] of y); 1`] = `
{
  "body": [
    {
      "await": false,
      "body": {
        "type": "EmptyStatement",
      },
      "left": {
        "computed": true,
        "object": {
          "name": "using",
          "type": "Identifier",
        },
        "optional": false,
        "property": {
          "name": "x",
          "type": "Identifier",
        },
        "type": "MemberExpression",
      },
      "right": {
        "name": "y",
        "type": "Identifier",
      },
      "type": "ForOfStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Using declarations (pass) > function f() { using x = y; } 1`] = `
{
  "body": [
    {
      "async": false,
      "body": {
        "body": [
          {
            "declarations": [
              {
                "id": {
                  "name": "x",
                  "type": "Identifier",
                },
                "init": {
                  "name": "y",
                  "type": "Identifier",
                },
                "type": "VariableDeclarator",
              },
            ],
            "kind": "using",
            "type": "VariableDeclaration",
          },
        ],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "f",
        "type": "Identifier",
      },
      "params": [],
      "type": "FunctionDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Using declarations (pass) > switch (a) { case 1: using x = y; } 1`] = `
{
  "body": [
    {
      "cases": [
        {
          "consequent": [
            {
              "declarations": [
                {
                  "id": {
                    "name": "x",
                    "type": "Identifier",
                  },
                  "init": {
                    "name": "y",
                    "type": "Identifier",
                  },
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "using",
              "type": "VariableDeclaration",
            },
          ],
          "test": {
            "type": "Literal",
            "value": 1,
          },
          "type": "SwitchCase",
        },
      ],
      "discriminant": {
        "name": "a",
        "type": "Identifier",
      },
      "type": "SwitchStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Using declarations (pass) > using
x = y; 1`] = `
{
  "body": [
    {
      "expression": {
        "name": "using",
        "type": "Identifier",
      },
      "type": "ExpressionStatement",
    },
    {
      "expression": {
        "left": {
          "name": "x",
          "type": "Identifier",
        },
        "operator": "=",
        "right": {
          "name": "y",
          "type": "Identifier",
        },
        "type": "AssignmentExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Using declarations (pass) > using => x; 1`] = `
{
  "body": [
    {
      "expression": {
        "async": false,
        "body": {
          "name": "x",
          "type": "Identifier",
        },
        "expression": true,
        "generator": false,
        "params": [
          {
            "name": "using",
            "type": "Identifier",
          },
        ],
        "type": "ArrowFunctionExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Using declarations (pass) > using instanceof X; 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "name": "using",
          "type": "Identifier",
        },
        "operator": "instanceof",
        "right": {
          "name": "X",
          "type": "Identifier",
        },
        "type": "BinaryExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Using declarations (pass) > using x = y; 1`] = `
{
  "body": [
    {
      "declarations": [
        {
          "id": {
            "name": "x",
            "type": "Identifier",
          },
          "init": {
            "name": "y",
            "type": "Identifier",
          },
          "type": "VariableDeclarator",
        },
      ],
      "kind": "using",
      "type": "VariableDeclaration",
    },
  ],
  "sourceType": "module",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Using declarations (pass) > using x = y; 2`] = `
{
  "body": [
    {
      "declarations": [
        {
          "end": 11,
          "id": {
            "end": 7,
            "loc": {
              "end": {
                "column": 7,
                "line": 1,
              },
              "start": {
                "column": 6,
                "line": 1,
              },
            },
            "name": "x",
            "range": [
              6,
              7,
            ],
            "start": 6,
            "type": "Identifier",
          },
          "init": {
            "end": 11,
            "loc": {
              "end": {
                "column": 11,
                "line": 1,
              },
              "start": {
                "column": 10,
                "line": 1,
              },
            },
            "name": "y",
            "range": [
              10,
              11,
            ],
            "start": 10,
            "type": "Identifier",
          },
          "loc": {
            "end": {
              "column": 11,
              "line": 1,
            },
            "start": {
              "column": 6,
              "line": 1,
            },
          },
          "range": [
            6,
            11,
          ],
          "start": 6,
          "type": "VariableDeclarator",
        },
      ],
      "end": 12,
      "kind": "using",
      "loc": {
        "end": {
          "column": 12,
          "line": 1,
        },
        "start": {
          "column": 0,
          "line": 1,
        },
      },
      "range": [
        0,
        12,
      ],
      "start": 0,
      "type": "VariableDeclaration",
    },
  ],
  "end": 12,
  "loc": {
    "end": {
      "column": 12,
      "line": 1,
    },
    "start": {
      "column": 0,
      "line": 1,
    },
  },
  "range": [
    0,
    12,
  ],
  "sourceType": "module",
  "start": 0,
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Using declarations (pass) > using(x); 1`] = `
{
  "body": [
    {
      "expression": {
        "arguments": [
          {
            "name": "x",
            "type": "Identifier",
          },
        ],
        "callee": {
          "name": "using",
          "type": "Identifier",
        },
        "optional": false,
        "type": "CallExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Using declarations (pass) > using.x = y; 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "computed": false,
          "object": {
            "name": "using",
            "type": "Identifier",
          },
          "optional": false,
          "property": {
            "name": "x",
            "type": "Identifier",
          },
          "type": "MemberExpression",
        },
        "operator": "=",
        "right": {
          "name": "y",
          "type": "Identifier",
        },
        "type": "AssignmentExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Using declarations (pass) > using: x; 1`] = `
{
  "body": [
    {
      "body": {
        "expression": {
          "name": "x",
          "type": "Identifier",
        },
        "type": "ExpressionStatement",
      },
      "label": {
        "name": "using",
        "type": "Identifier",
      },
      "type": "LabeledStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Using declarations (pass) > using[x] = y; 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "computed": true,
          "object": {
            "name": "using",
            "type": "Identifier",
          },
          "optional": false,
          "property": {
            "name": "x",
            "type": "Identifier",
          },
          "type": "MemberExpression",
        },
        "operator": "=",
        "right": {
          "name": "y",
          "type": "Identifier",
        },
        "type": "AssignmentExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Using declarations (pass) > var us\\u0069ng = x; 1`] = `
{
  "body": [
    {
      "declarations": [
        {
          "id": {
            "name": "using",
            "type": "Identifier",
          },
          "init": {
            "name": "x",
            "type": "Identifier",
          },
          "type": "VariableDeclarator",
        },
      ],
      "kind": "var",
      "type": "VariableDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Next - Explicit resource management > Using declarations (pass) > var using = x; 1`] = `
{
  "body": [
    {
      "declarations": [
        {
          "id": {
            "name": "using",
            "type": "Identifier",
          },
          "init": {
            "name": "x",
            "type": "Identifier",
          },
          "type": "VariableDeclarator",
        },
      ],
      "kind": "var",
      "type": "VariableDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;
